the website + the other pages
Has server connection issues, cannot connect to sql database

--- a/Website/index.html
+++ b/Website/index.html
@@ -27,7 +27,7 @@
     <section class="hero">
         <h2>Explore the Cosmos with AstroMind</h2>
         <p>An advanced space simulation experience driven by AI.</p>
-        <button class="button">Run Simulation</button> <!-- I think you can do the CSS by dividing the section into 1/3rds and putting the title above the paragraph-->
+        <button class="button"><a href="sim.html">Run Simulation</a></button> <!-- I think you can do the CSS by dividing the section into 1/3rds and putting the title above the paragraph-->
     </section>
     <section class="start">
      <h2>What is Astromind</h2>
@@ -66,7 +66,7 @@
     </section> <!--List of things that explain it easily-->
     <section class="cta">
         <h2>Ready to Begin Your Space Journey?</h2>
-        <button class="button">Start Your Mission Now</button>
+        <button class="button"><a href="sign.html">Start Your Mission Now</a></button>
     </section> <!-- you can make the button more flashy and maybe a different color so that it catches the eye and stands out-->
     <section class="meet-the-crew">
         <h2>Meet the Crew</h2>
