--- a/Website/start.html
+++ b/Website/start.html
@@ -71,7 +71,8 @@
       <div class="how-container">
         <div class="how-step">
           <h3>Pick a Scenario</h3>
-          <p>Select a space mission challenge.</p>
+          <p>Choose a space mission challenge to face. 
+            Select a pre-made scenario to save time and improve your experience.  </p>
         </div>
         <div class="how-step">
           <h3>Analyze the Crew’s Reactions</h3>
@@ -79,21 +80,16 @@
         </div>
         <div class="how-step">
           <h3>Decide & Get Feedback</h3>
-          <p>Make a choice, and see if it leads to mission success.</p>
+          <p>Make a choice, see if it leads to mission success and gain new knowledge using our project.</p>
         </div>
       </div>
     </section>
-    <!--List of things that explain it easily-->
     <section class="cta">
       <h2>Ready to Begin Your Space Journey?</h2>
       <div class="mission"><a href="simulator.html">Start your mission now</a></div>   
     </section>
-    <!-- you can make the button more flashy and maybe a different color so that it catches the eye and stands out-->
-    <section class="meet-the-crew">
-      <h2>Meet the Crew</h2>
-      <p>Get to know the team behind the projects.</p>
       <section class="meet-the-crew">
-        <h2>Meet the Crew</h2>
+        <h2>Meet the Crew</h2>        
         <p>Get to know the team behind the projects.</p>
         <div class="crew-grid">
           <div class="person">
