Done with the website design (i think)

--- a/Website/start.html
+++ b/Website/start.html
@@ -9,6 +9,7 @@
       href="https://fonts.googleapis.com/css?family=Audiowide"
       rel="stylesheet"
     />
+    <link rel="shortcut icon" href="favicon-16x16.png" type="image/x-icon">
     <style>
       body {
         font-family: "Audiowide";
@@ -30,24 +31,24 @@
     <div class="all">
       <img id="stars" src="cosmos-rawpixel-scaled.jpg" alt="Stars" />
       <div class="next-intro">
-    <div class="hero">
-      <h2>Explore the Cosmos with AstroMind</h2>
-      <p>An advanced space simulation experience driven by AI.</p>
-      <div class="run"><a href="simulator.html">Run Simulation</a> </div>      
-      <!-- I think you can do the CSS by dividing the section into 1/3rds and putting the title above the paragraph-->
-    </div>
-    <section class="start">
+      <div class="start-flex">
+        <div class="hero">
+          <h2>Explore the Cosmos with AstroMind</h2>
+          <p>An advanced space simulation experience driven by AI.</p>
+          <div class="run"><a href="simulator.html">Run Simulation</a> </div>      
+          <!-- I think you can do the CSS by dividing the section into 1/3rds and putting the title above the paragraph-->
+        </div>
+      </div>
       <div class="explain">
-      <h2>What is AstroMind?</h2>
-      <div class="answer">
-        <p>AstroMind is an AI-driven space psychology simulator where you step into Mission Control and navigate the unseen challenges of deep space. Astronauts aren’t just explorers—they're humans with unique behaviors, emotions, and reactions. Your mission? Analyze crew dynamics, solve unpredictable crises, and make critical decisions that could mean survival or failure.
-
-          Blending AI, psychology, and space exploration, AstroMind reveals what’s usually invisible, turning the unknown into insight. Are you ready to think like an astronaut, decide like a leader, and explore beyond the stars?</p>
+        <h2>What is AstroMind?</h2>
+        <div class="answer">
+          <p>AstroMind is an AI-driven space psychology simulator where you step into Mission Control and navigate the unseen challenges of deep space. Astronauts aren’t just explorers—they're humans with unique behaviors, emotions, and reactions. Your mission? Analyze crew dynamics, solve unpredictable crises, and make critical decisions that could mean survival or failure.
+  
+            Blending AI, psychology, and space exploration, AstroMind reveals what’s usually invisible, turning the unknown into insight. Are you ready to think like an astronaut, decide like a leader, and explore beyond the stars?</p>
+        </div>
       </div>
     </div>
-    </div>
       <!--I recommend putting a little bit of a margin/padding on the left or right for the text so that it isnt as stretched-->
-    </section>
     <div class="key">
       <h2>Key Features</h2>
       <div class="features">
@@ -119,10 +120,6 @@
       <div class="footer-container">
         <div class="contact-info">
           <h3>Contact Us</h3>
-          <p>Email: <a href="mailto:">Email</a></p>
-          <!--email if we need it idk what email to put in so it is blank-->
-          <p>Phone:</p>
-          <!--dont know about this aswell-->
         </div>
         <section id="feedback">
           <h2>Send Us Your Feedback</h2>
