--- a/Website/index.html
+++ b/Website/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>AstroMind</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style.css"/>
+    <link rel="shortcut icon" href="favicon-16x16.png" type="image/x-icon">
   </head>
   <style>
     html,
