updated logo link

--- a/Website/simulator.html
+++ b/Website/simulator.html
@@ -20,7 +20,7 @@
 
   <body>
     <header>
-      <img id="logo" src="croppedLogoIMG.png" alt="Logo" />
+        <a  id="logoLink" href="start.html"><img id="logo" src="croppedLogoIMG.png" alt="Logo" />
       <nav>
         <a href="start.html">Home</a>
         <a href="simulator.html">Control Deck</a>
