--- a/Website/start.html
+++ b/Website/start.html
@@ -20,7 +20,7 @@
   <body>
     
     <header>
-      <img id="logo" src="croppedLogoIMG.png" alt="Logo" />
+      <a  id="logoLink" href="#"><img id="logo" src="croppedLogoIMG.png" alt="Logo" />
       <nav>
         <a href="#">Home</a>
         <a href="simulator.html">Control Deck</a>
