without input cases

--- a/Website/simulator.html
+++ b/Website/simulator.html
@@ -77,9 +77,9 @@
         </select>
 
         <br /><br />
-        <a class="mission" id="missionSim" onclick="submitProblem()">
+        <button class="mission" id="missionSim" onclick="submitProblem()">
           Submit Problem
-        </a>
+        </button>
       </div>
     </div>
 
