--- a/Website/simulator.html
+++ b/Website/simulator.html
@@ -77,9 +77,8 @@
         </select>
 
         <br /><br />
-        <button class="mission" id="missionSim" onclick="submitProblem()">
-          Submit Problem
-        </button>
+        <a class="mission" id="missionSim" href="chat.html">Submit Problem</a>
+
       </div>
     </div>
 
