--- a/Website/chat.html
+++ b/Website/chat.html
@@ -40,10 +40,10 @@
 
       <!-- User Input -->
       <textarea id="chat-input" rows="3" cols="80" placeholder=""></textarea>
-
-      <br />
-      <button onclick="sendMessage()">Send</button>
-      <button onclick="validateResponse()">Check Validity</button>
+      <br>
+      <br>
+      <button onclick="sendMessage()" class="aibutton">Send</button>
+      <button onclick="validateResponse()" class="aibutton">Check Validity</button>
 
       <!-- Hidden Validation Message -->
       <div
